# pip-skills

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  settings.snippets.json
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
docs/design/quest-board/: HANDOFF.md  prototype.html
docs/emails/research/: ALL_EMAIL_RESEARCH_SUMMARY.md  (+8 more)
docs/research/: 2026-07-12-claude-code-task-system.md
plugins/census/: README.md  pyproject.toml
plugins/django/: README.md
plugins/django-inquisition/: README.md
plugins/email-absolution/: README.md  plugin.json
plugins/overseer/: README.md
plugins/overseer/dashboard/backend/: README.md  pyproject.toml
plugins/overseer/dashboard/backend/app/: cli_client.py  main.py
plugins/overseer/dashboard/backend/tests/: conftest.py  test_app_smoke.py  test_board.py  test_card_detail.py  test_claim.py  test_cli_client.py  test_dist_freshness.py  test_mutations.py  test_serve.py  test_sessions.py  test_static.py
plugins/puritan/: README.md
plugins/review-clone/: README.md  pyproject.toml
plugins/tribunal/: README.md
plugins/vigil/: README.md
skill-creator-workspace/: covenant-evals.json  inquisition-evals.json  reckoning-evals.json  scriptorium-evals.json
skills/arch-audit/: SKILL.md
skills/changelog/: SKILL.md
skills/code-review/: SKILL.md
skills/commit-msg/: SKILL.md
skills/debug-assist/: SKILL.md
skills/docs-gen/: SKILL.md
skills/pr-review/: SKILL.md
skills/refactor/: SKILL.md
skills/security-scan/: SKILL.md
skills/test-gen/: SKILL.md
(+375 files in other folders)
